fixed parallax on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,29 @@
   font-family: 'Barlow', sans-serif;
 }
 
+.parallaxClass{
+  perspective: "1px";
+  overflow-x: "hidden";
+  overflow-y: "auto"
+}
+
+.parallaxLayer {
+  position: "absolute";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0
+}
+
+.base {
+  transform: translateZ(0)
+}
+
+.back {
+  transform: translateZ('-1px')
+}
+
+
 .App {
   text-align: center;
 }
